# message-sender-microsservice

./: .gitignore  README.md  main.py  playground.py  pyproject.toml  pyrefly.toml  requirements.txt
core/: .env.sample  context.py  dependencies.py  settings.py
database/: schema.sql
helper/: dotenv_load_helper.py  logging_helper.py
helpers/: dotenv_load_helper.py  logging_helper.py  uptime_helper.py
middlewares/: correlation_id_mw.py
models/: data_events.py  interfaces.py  models.py
repositories/: data_event_repository.py  database_interfaces.py  message_sender_repository.py  postgres_repository.py  routing_rule_repository.py  statistics_repository.py
routers/: data_ingestion_router.py  message_router.py  routing_rules_router.py  schemas.py  statistics_router.py  test_router.py
services/: create_message_service.py  data_ingestion_service.py  message_service.py  routing_rule_service.py  routing_service.py  statistics_service.py
tests/: database_tests.py  e2e_tests.py  integration_tests.py  test_health_endpoint.py  units_tests.py  waha_api_test.py
